--- a/sketch/index.html
+++ b/sketch/index.html
@@ -22,6 +22,7 @@
 
     <!-- Reference to sketch.js -->
     <!-- Remember to reference each JS file like this! -->
+    <script type="text/javascript" src="particle_system.js"></script>
     <script type="text/javascript" src="sketch.js"></script>
 
     <!-- Reference to style.css -->
